add spring security with user password connexion
+ sanitize chat message